--- a/package.json
+++ b/package.json
@@ -11,5 +11,38 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+        "atom-linter": "^10.0.0",
+        "atom-package-deps": "^4.0.1",
+        "tmp": "^0.0.33",
+        "fs-plus":"*"
+  },
+  "configSchema": {
+    "executablePath": {
+    "type": "string",
+    "default": "erlc"
+    },
+    "includeDirs": {
+    "type": "array",
+    "description": "A comma separated list of paths included by erlc with the -I flag",
+    "default": [],
+    "items": {
+      "type": "string"
+    }
+    },
+    "pa": {
+    "type": "array",
+    "description": "A comma separated list of paths added with the -pa flag",
+    "default": [],
+    "items": {
+      "type": "string"
+    }
+    }
+    },
+  "providedServices": {
+  "linter": {
+    "versions": {
+      "2.0.0": "provideLinter"
+    }
   }
+}
 }
